--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #F6F6F4;
 }
 .container {
   display: flex;
@@ -53,12 +54,12 @@
 
 .tabs-container {
   width: 1000px;
-  min-height: 100%; /* Set minimum height to 100% to adapt to content */
+  min-height: 100%; 
   border: 1px solid #ccc;
   border-radius: 5px;
   margin: 0 auto;
   padding: 20px;
-  display: flex; /* Use flex display to align items vertically */
+  display: flex; 
   flex-direction: column; /* Align items in a column */
 }
 
@@ -70,7 +71,7 @@ footer {
 }
 
 footer p {
-  color: #ccc;
+   color: #ccc;
 }
 #about-me {
   display: flex;
@@ -133,18 +134,32 @@ footer p {
 #my-tech li svg {
   color: #333;
 }
-/* You can add this CSS code to your existing styles or create a new CSS file */
+
 
 .my-photo {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px; /* Add space between the text and image */
+  margin-top: 20px; 
 }
 
 .my-photo img {
-  width: 200px; /* Adjust the width to your preference */
-  height: auto; /* Maintain aspect ratio */
-  border-radius: 50%; /* Make the image circular */
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+  width: 200px; 
+  height: auto; 
+  border-radius: 50%; 
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); 
 }
+
+.social-links {
+  text-align: center;
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: center; 
+  background-color: #F6F6F4;
+}
+
+.social-links li {
+  margin: 0 0.5rem; 
+}
+
